# ipk-exercises

./: .gitignore  01_mitternachtsformel.cc  03b_fibonacci_iterativ.cc  tar.sh  test.gitignore
Blatt02/: 03a_fibonacci.cc
Blatt03/: 01_git.txt  02_positive-potenzen.cc  votieren.txt
Blatt04/: 2_konvexe-huelle.cc  4.1.cc  4.1_std-vector  4.1_std-vector.cc  4.2_konvexe-huelle.cc  votieren.txt
Blatt05/: 5.3.cc  CMakeLists.txt  example  normal.cc  readvector.cc  statistics.cc  statistics.hh  uniform_distribution.cc  votieren.txt
Blatt06/: CMakeLists.txt  canvas.cc  canvas.hh  pixelgrafiken.cc  point.cc  point.hh  polygon.cc  polygon.hh  votieren.txt
Blatt07/: CMakeLists.txt  main  main.cpp  point.cc  point.cpp  point.hh  statistics.hh  statisticsdriver.cc  test_point.cc  votieren.txt
Blatt08/: mandelbrot.cc  mandelbrot.hh
Blatt09/: debug-with-errors.tar
Blatt09/debug-with-errors/: debug-1  debug-1.cc  debug-2  debug-3  debug-3.cc
Blatt09/debug-with-errors/debug-1.dSYM/Contents/: Info.plist
Blatt09/debug-with-errors/debug-1.dSYM/Contents/Resources/DWARF/: debug-1
Blatt09/debug-with-errors/debug-2.dSYM/Contents/: Info.plist
Blatt09/debug-with-errors/debug-2.dSYM/Contents/Resources/DWARF/: debug-2
Blatt09/debug-with-errors/debug-3.dSYM/Contents/: Info.plist
Blatt09/debug-with-errors/debug-3.dSYM/Contents/Resources/DWARF/: debug-3
Blatt111/: 02_collatz.cc
